welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.code
def indexOfMaxValue(nums:Array[Int]):Int = {
var n=nums(0)
var m=i
	 for (i <- 1 to nums.length-1) {

	 if (nums(i)>n) {n=nums(i) 
	 
	 }	
	 }
	
	 return m
}
